--- a/.github/workflows/waka-box.yml
+++ b/.github/workflows/waka-box.yml
@@ -43,6 +43,7 @@ jobs:
       - name: Commit and push
         run: |-
           ./waka
+          echo "aaaaaaaaa"
           git config --global user.email "bot@github.com" && git config --global user.name "Waka-Bot"
           git diff
           git add README.md && git commit -m ":memo: update profile" || exit 0
